Wrap review timeline in a container [elifesciences/enhanced-preprints-issues#1113]
Added a div container to wrap the review timeline for better layout control. Also updated the related CSS class from '.review-timeline' to '.review-timeline-container'.

--- a/src/components/molecules/timeline/timeline.scss
+++ b/src/components/molecules/timeline/timeline.scss
@@ -2,7 +2,7 @@
 @use "../../../sass/settings";
 @use "../../../sass/typography";
 
-.review-timeline {
+.review-timeline-container {
   @include mixins.margin(36, "bottom");
   @include mixins.margin(36, "top");
 
@@ -15,6 +15,10 @@
     @include mixins.margin(6, "left");
     @include mixins.margin(12, "top");
   }
+}
+
+.review-timeline {
+  @include mixins.margin(0);
 
   &__event,
   &__detail {
